# Football-Data

./: README.md
Callahan Conundrum/: Methodology  README.md
Callahan Conundrum Part 1/: README.md
Callahan Conundrum Part 1/Callahan-Conundrum-Chapter-1/: bar_def_early_epa.py  bar_def_epa.py  bar_def_success.py  bar_dsrs.py  bar_off_early_epa.py  bar_off_epa.py  bar_off_success.py  bar_osrs.py  bar_pa.py  bar_pd.py  bar_pf.py  bar_srs.py  main.py
Callahan Conundrum Part 1/Callahan-Conundrum-Chapter-1/Data/: titans_epa_per_game.csv
Callahan Conundrum Part 1/Callahan-Conundrum-Chapter-2/: pyproject.toml
Callahan Conundrum Part 1/Callahan-Conundrum-Chapter-2/Data/: team_years.csv
Callahan Conundrum Part 1/Callahan-Conundrum-Chapter-3/: line_def_early_epa.py  line_def_epa.py  line_def_success.py  line_off_early_epa.py  line_off_epa.py  line_off_success.py  line_proe.py
Callahan Conundrum Part 1/Data 1/: pyproject.toml  titans_metrics_final.py
Callahan Conundrum/Chapter 1/: bar_def_early_epa.py  bar_def_epa.py  bar_def_success.py  bar_dsrs.py  bar_off_early_epa.py  bar_off_epa.py  bar_osrs.py  bar_pa.py  bar_pd.py  bar_pf.py  bar_proe.py  bar_srs.py  line_def_epa_game.py  line_off_epa_game.py  main.py
Callahan Conundrum/Chapter 2/: titans_pd.py  titans_srs.py
Callahan Conundrum/Chapter 3/: line_def_early_epa.py  line_def_epa.py  line_def_success.py  line_off_epa.py  line_off_success.py  line_proe.py  main.py
Callahan Conundrum/Chapter 3/Data/: combine.py
Callahan Conundrum/Data/: team_years.py  titans_epa_per_game.py  titans_season_metrics.csv
(+4 files in other folders)
